objects/LatAm_Opportunity_Team_History__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Role</fullName>
                </value>
                <value>
                    <fullName>Sales Percentage</fullName>
                </value>
                <value>
                    <fullName>Opportunity Access</fullName>
                </value>
                <value>
                    <fullName>Team Role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Team History</relationshipLabel>
        <relationshipName>Opportunity_Team_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OpportunityTeamMemberId__c</fullName>
        <label>OpportunityTeamMemberId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityTeamMember</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Team_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Team History</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Opportunity Team History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Team History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>